--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,10 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": ["src/lib/js/fhir-client-cerner-additions-1.0.0.js",
+              "src/lib/js/fhir-client-cerner-additions-1.0.0.js",
+              "src/lib/js/cerner-smart-embeddable-lib-1.0.0.min.js"
+              ]
           },
           "configurations": {
             "production": {
