--- a/angular.json
+++ b/angular.json
@@ -28,9 +28,13 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.scss"
             ],
-            "scripts": ["src/lib/js/fhir-client-cerner-additions-1.0.0.js",
+            "scripts": [
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "src/lib/js/fhir-client-cerner-additions-1.0.0.js",
               "src/lib/js/fhir-client-cerner-additions-1.0.0.js",
               "src/lib/js/cerner-smart-embeddable-lib-1.0.0.min.js"
               ]
