--- a/angular.json
+++ b/angular.json
@@ -34,7 +34,7 @@
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
               "node_modules/bootstrap/dist/js/bootstrap.min.js",
-              "src/lib/js/fhir-client-cerner-additions-1.0.0.js",
+              "src/lib/js/fhir-client-v0.1.12.js",
               "src/lib/js/fhir-client-cerner-additions-1.0.0.js",
               "src/lib/js/cerner-smart-embeddable-lib-1.0.0.min.js"
               ]
@@ -73,7 +73,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "FHIR:build"
+            "browserTarget": "FHIR:build",
+            "proxyConfig": "src/proxy.conf.json"
           },
           "configurations": {
             "production": {
